[build-system]
requires = ["setuptools >= 45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = [
    'py37',
    'py38',
    'py39',
]
include = '''
^/(
      archngv/.*\.py
    | tests/.*\.py
    | doc/source/conf\.py
    | setup\.py
)$
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-few-public-methods",
    "too-many-public-methods",
    "fixme",
    "no-init",
    "superfluous-parens",
    "bad-continuation",
    "import-outside-toplevel",
    "unsubscriptable-object",
    "unsupported-assignment-operation",
    "unbalanced-tuple-unpacking",
    "unspecified-encoding",
    "consider-using-f-string",
]

[tool.pylint.format]
# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines = '\bhttps?://\S'
# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 8
# Argument names that match this expression will be ignored. Default to name
# with leading underscore
ignored-argument-names = '_.*'
# Maximum number of locals for function / method body
max-locals = 30
# Maximum number of return / yield for function / method body
max-returns = 6
# Maximum number of branch for function / method body
max-branchs = 12
# Maximum number of statements in function / method body
max-statements = 50
# Maximum number of parents for a class (see R0901).
max-parents = 7
# Maximum number of attributes for a class (see R0902).
max-attributes = 40
# Minimum number of public methods for a class (see R0903).
min-public-methods = 0
# Maximum number of public methods for a class (see R0904).
max-public-methods = 60

[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 25
# Ignore comments when computing similarities.
ignore-comments = 'yes'
# Ignore docstrings when computing similarities.
ignore-docstrings = 'yes'

[tool.pylint.typecheck]
# List of classes names for which member attributes should not be checked
# (useful for classes with attributes dynamically set).

ignored-modules = [
    "tns",
    "numpy",
    "numpy.*",
    "scipy.stats",
    "scipy.spatial",
]

#as of numpy 1.8.0, name resolution seems to be a problem.  Ignore lookups in numpy
ignored-classes = ["numpy"]

extension-pkg-allow-list=[
    "cKDTree",
    "libsonata",
    "morphio",
    "ngv_ctools",
    "numpy",
    "openmesh",
    "scipy",
    "spatial_index",
]
